// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs generation snapshots > keeps generated accordion blocks as HTML through markdown transform 1`] = `
"<h1 id="utils-ts">utils.ts</h1>
<p><strong><a href="https://github.com/acme/ox-content/blob/main/src/utils.ts" target="_blank" rel="noopener noreferrer">Source</a></strong></p>
<blockquote>
<p>1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.</p>
</blockquote>
<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

<h2 id="reference">Reference</h2>
<details id="capitalize" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript shiki-inline" data-language="typescript"><span class="line"><span style="color:#80A665">capitalize</span><span style="color:#666666">(</span><span style="color:#BD976A">value</span><span style="color:#DBD7CAEE">: </span><span style="color:#BD976A">string</span><span style="color:#666666">)</span><span style="color:#DBD7CAEE">: </span><span style="color:#BD976A">string</span></span></code><span class="ox-api-entry__description">Capitalizes user-facing labels before they are passed to RoundMode-aware format…</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns string</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 1.4.0</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Capitalizes user-facing labels before they are passed to <a href="./math.md#roundmode">RoundMode</a>-aware formatters.</p>
<p>Keeps already-uppercase acronyms unchanged.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre class="shiki vitesse-dark" style="background-color:#121212;color:#dbd7caee" tabindex="0" data-language="typescript"><code class="language-typescript" data-language="typescript"><span class="line"><span style="color:#4D9375">export</span><span style="color:#CB7676"> function</span><span style="color:#80A665"> capitalize</span><span style="color:#666666">(</span><span style="color:#BD976A">value</span><span style="color:#666666">: </span><span style="color:#5DA994">string</span><span style="color:#666666">):</span><span style="color:#5DA994"> string</span></span></code></pre>
</div>
<p class="ox-api-entry__source"><a class="ox-api-entry__source-link" href="https://github.com/acme/ox-content/blob/main/src/utils.ts#L4-L14" target="_blank" rel="noopener noreferrer">View source<span class="ox-api-entry__source-icon" aria-hidden="true"></span></a></p>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<ul class="ox-api-entry__params">
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">value</code>
    <code class="ox-api-entry__param-type">string</code>
  </div>
  <p class="ox-api-entry__param-description">Source label to normalize</p>
</li>
</ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">string</code>
  <p class="ox-api-entry__return-description">Normalized label with an uppercased first glyph</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--examples">
<h4>Examples</h4>
<div class="ox-api-entry__example">
<div class="ox-api-entry__example-heading">Example 1</div>
<pre class="shiki vitesse-dark" style="background-color:#121212;color:#dbd7caee" tabindex="0" data-language="ts"><code class="language-ts" data-language="ts"><span class="line"><span style="color:#80A665">capitalize</span><span style="color:#666666">(</span><span style="color:#C98A7D77">"</span><span style="color:#C98A7D">docs</span><span style="color:#C98A7D77">"</span><span style="color:#666666">);</span></span>
<span class="line"><span style="color:#80A665">capitalize</span><span style="color:#666666">(</span><span style="color:#C98A7D77">"</span><span style="color:#C98A7D">API</span><span style="color:#C98A7D77">"</span><span style="color:#666666">);</span></span></code></pre>
</div>
</div>
  </div>
</details>

"
`;

exports[`docs generation snapshots > matches the generated module and index markdown 1`] = `
{
  "index": "# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like \`@api transform\` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>examples</span>
</span>
<span class="ox-api-stat ox-api-stat--warning">
  <strong>1</strong>
  <span>deprecated</span>
</span>
</div>

## Modules

<div class="ox-api-controls" data-ox-api-target=".ox-api-module" role="toolbar" aria-label="Reference display controls">
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="expand">Open all</button>
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="collapse">Close all</button>
</div>

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./math.md">math</a></span>
    <span class="ox-api-module__count">2 symbols</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">fn</span><div class="ox-api-module__item"><a href="./math.md#round" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">round(value: number, decimals: number, mode: RoundMode = &quot;half-up&quot;): number</code></a><span class="ox-api-module__summary">Rounds a numeric value using RoundMode. Useful when an API result needs deterministic f…</span><span class="ox-api-module__meta"><span class="ox-api-badge ox-api-badge--warning">deprecated</span><span class="ox-api-badge">3 params</span><span class="ox-api-badge">returns number</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 2.0.0</span></span></div></li>
      <li><span class="ox-api-module__kind">type</span><div class="ox-api-module__item"><a href="./math.md#roundmode" class="ox-api-module__link"><code class="ox-api-module__name">RoundMode</code></a><span class="ox-api-module__summary">Controls how values are rounded before they are displayed.</span><span class="ox-api-module__meta"><span class="ox-api-badge">since 2.0.0</span></span></div></li>
    </ul>
  </div>
</details>

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./utils.md">utils</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">fn</span><div class="ox-api-module__item"><a href="./utils.md#capitalize" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">capitalize(value: string): string</code></a><span class="ox-api-module__summary">Capitalizes user-facing labels before they are passed to RoundMode-aware formatters. Ke…</span><span class="ox-api-module__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns string</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 1.4.0</span></span></div></li>
    </ul>
  </div>
</details>

",
  "math": "# math.ts

**[Source](https://github.com/acme/ox-content/blob/main/src/math.ts)**

> 2 documented symbols. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
<span class="ox-api-stat ox-api-stat--warning">
  <strong>1</strong>
  <span>deprecated</span>
</span>
</div>

## Reference

<div class="ox-api-controls" data-ox-api-target=".ox-api-entry" role="toolbar" aria-label="Reference display controls">
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="expand">Open all</button>
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="collapse">Close all</button>
</div>

<details id="round" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">round(value: number, decimals: number, mode: RoundMode = &quot;half-up&quot;): number</code><span class="ox-api-entry__description">Rounds a numeric value using RoundMode. Useful when an API result needs determi…</span><span class="ox-api-entry__meta"><span class="ox-api-badge ox-api-badge--warning">deprecated</span><span class="ox-api-badge">3 params</span><span class="ox-api-badge">returns number</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 2.0.0</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Rounds a numeric value using <a href="#roundmode">RoundMode</a>.</p>
<p>Useful when an API result needs deterministic formatting.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function round(value: number, decimals: number, mode: RoundMode = &quot;half-up&quot;): number</code></pre>
</div>
<p class="ox-api-entry__source"><a class="ox-api-entry__source-link" href="https://github.com/acme/ox-content/blob/main/src/math.ts#L10-L24" target="_blank" rel="noopener noreferrer">View source<span class="ox-api-entry__source-icon" aria-hidden="true"></span></a></p>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<ul class="ox-api-entry__params">
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">value</code>
    <code class="ox-api-entry__param-type">number</code>
  </div>
  <p class="ox-api-entry__param-description">Input value to normalize</p>
</li>
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">decimals</code>
    <code class="ox-api-entry__param-type">number</code>
  </div>
  <p class="ox-api-entry__param-description">Maximum fractional precision</p>
</li>
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">mode</code>
    <code class="ox-api-entry__param-type"><a href="#roundmode">RoundMode</a></code>
  </div>
  <p class="ox-api-entry__param-description">Rounding behavior to apply — default: &quot;half-up&quot;</p>
</li>
</ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">number</code>
  <p class="ox-api-entry__return-description">Rounded numeric value</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--examples">
<h4>Examples</h4>
<div class="ox-api-entry__example">
<div class="ox-api-entry__example-heading">Example 1</div>
<pre><code class="language-ts">round(3.14159, 2, &quot;half-up&quot;);
round(1.005, 2, &quot;bankers&quot;);</code></pre>
</div>
</div>
  </div>
</details>

<details id="roundmode" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">type</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__name">RoundMode</code><span class="ox-api-entry__description">Controls how values are rounded before they are displayed.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">since 2.0.0</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Controls how values are rounded before they are displayed.</p>
</div>
<p class="ox-api-entry__source"><a class="ox-api-entry__source-link" href="https://github.com/acme/ox-content/blob/main/src/math.ts#L3" target="_blank" rel="noopener noreferrer">View source<span class="ox-api-entry__source-icon" aria-hidden="true"></span></a></p>
  </div>
</details>

",
  "utils": "# utils.ts

**[Source](https://github.com/acme/ox-content/blob/main/src/utils.ts)**

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

## Reference

<details id="capitalize" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">capitalize(value: string): string</code><span class="ox-api-entry__description">Capitalizes user-facing labels before they are passed to RoundMode-aware format…</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns string</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 1.4.0</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Capitalizes user-facing labels before they are passed to <a href="./math.md#roundmode">RoundMode</a>-aware formatters.</p>
<p>Keeps already-uppercase acronyms unchanged.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function capitalize(value: string): string</code></pre>
</div>
<p class="ox-api-entry__source"><a class="ox-api-entry__source-link" href="https://github.com/acme/ox-content/blob/main/src/utils.ts#L4-L14" target="_blank" rel="noopener noreferrer">View source<span class="ox-api-entry__source-icon" aria-hidden="true"></span></a></p>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<ul class="ox-api-entry__params">
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">value</code>
    <code class="ox-api-entry__param-type">string</code>
  </div>
  <p class="ox-api-entry__param-description">Source label to normalize</p>
</li>
</ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">string</code>
  <p class="ox-api-entry__return-description">Normalized label with an uppercased first glyph</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--examples">
<h4>Examples</h4>
<div class="ox-api-entry__example">
<div class="ox-api-entry__example-heading">Example 1</div>
<pre><code class="language-ts">capitalize(&quot;docs&quot;);
capitalize(&quot;API&quot;);</code></pre>
</div>
</div>
  </div>
</details>

",
}
`;
